# claude

./: .gitignore  README.md  pyproject.toml
configs/: awareness.yaml  tail_seeds.yaml
docs/: architecture.md  data_dictionary.md  runbook.md  troubleshooting.md
ops/clickhouse/: captures.sql
ops/compose/: docker-compose.yml
scripts/: acceptance_smoke.sh
src/awareness/: __init__.py
src/awareness/api/: server.py
src/awareness/api/web/: app.js  index.html  style.css
src/awareness/cli/: __init__.py  main.py
src/awareness/config/: __init__.py  settings.py
src/awareness/dedup/: __init__.py  engine.py
src/awareness/normalize/: __init__.py  html.py  text.py
src/awareness/obs/: __init__.py  logging.py  metrics.py
src/awareness/planner/: __init__.py  planner.py
src/awareness/schemas/: __init__.py  doc.py  jobs.py
src/awareness/sources/: __init__.py  base.py  cc_index.py  commoncrawl_wet.py  feeds.py  fineweb.py  gdelt.py  local_fixture.py  tail_recrawl.py  warc_repair.py
src/awareness/storage/: __init__.py  duckdb_index.py  iceberg.py  iceberg_schema.py  jsonl.py  state.py
src/awareness/tail/: __init__.py  daemon.py  engine.py
src/awareness/util/: __init__.py  hashing.py  ratelimit.py  robots.py  timeutil.py  urls.py
src/awareness/workers/: __init__.py  engine.py  main.py
tests/: conftest.py
tests/integration/: test_worker_pipeline.py
tests/smoke/: test_tail_lifecycle.py
tests/unit/: test_dedup.py  test_hashing.py  test_jsonl.py  test_normalize.py  test_planner.py  test_urls.py
