[project]
name = "awareness"
version = "0.1.0"
description = "Public text internet awareness engine — BODY backfill and TAIL live capture of the public text web."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nazmi" }]
readme = "README.md"

dependencies = [
  # config / models
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0.1",
  # async / http
  "httpx>=0.27",
  "anyio>=4.4",
  "aiosqlite>=0.20",
  # storage / data
  "SQLAlchemy>=2.0",
  "pyarrow>=16.0",
  "duckdb>=1.0.0",
  "pyiceberg[sql-sqlite]>=0.7.0",
  "pyiceberg-core>=0.6",
  # text extraction / language / dedup
  "trafilatura>=1.10",
  "warcio>=1.7.4",
  "feedparser>=6.0.11",
  "lxml>=5.2",
  "langdetect>=1.0.9",
  "xxhash>=3.4",
  "mmh3>=4.1",
  "tldextract>=5.1",
  # cli / api / obs
  "typer>=0.12",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "structlog>=24.1",
  "rich>=13.7",
  # time
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
hf = ["datasets>=2.20", "huggingface-hub>=0.23"]
postgres = ["asyncpg>=0.29", "psycopg[binary]>=3.2"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
awareness = "awareness.cli.main:app"
awareness-api = "awareness.api.server:run"
awareness-worker = "awareness.workers.main:run"
awareness-tail = "awareness.tail.daemon:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/awareness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "smoke: end-to-end smoke tests that exercise real adapters",
  "integration: tests that touch durable storage",
  "slow: tests that hit the network or large fixtures",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF", "ASYNC", "S"]
ignore = ["S101", "PLR0913", "PLR2004", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
